--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -20,9 +20,6 @@
     <link href="~/Content/css2/Template-css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/css2/" rel="stylesheet" />
     <link href="~/Content/css2/Template-css/templatemo-kind-heart-charity.css" rel="stylesheet" />
-
-    @*<link rel="stylesheet" href="~/Content/css1/bootstrap.css">*@
-    @*<link rel="stylesheet" href="~/Content/css1/app.css">*@
 </head>
 <body id="section_1">
     <nav class="navbar navbar-expand-lg bg-light shadow-lg">
@@ -42,8 +39,6 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 @if (User.Identity.IsAuthenticated)
                 {
-
-
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="#top">Home</a>
@@ -59,11 +54,19 @@
                             </a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">
+                        <!-- Notification Bell -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link click-scroll" href="#" id="notificationBell" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="bi bi-bell-fill"></i>
+                                <span id="notificationCount" class="badge rounded-pill bg-danger" style="display: none;">0</span>
                             </a>
+                            <ul class="dropdown-menu dropdown-menu-end" id="notificationDropdown" aria-labelledby="notificationBell">
+                                <li><h6 class="dropdown-header">Notifications</h6></li>
+                                <li><a class="dropdown-item">No new notifications</a></li>
+                            </ul>
                         </li>
+
+                        <!-- User Profile Dropdown -->
                         <li class="nav-item">
                             @foreach (var pf in Model.volunteersInfo)
                             {
@@ -71,7 +74,6 @@
                                     <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                         <div class="user-menu d-flex mt-3">
                                             <div class="user-name text-end me-3">
-                                                @*<h6 class="mb-0 text-gray-600">@pf.fName</h6>*@
                                                 @if (pf.lName == null && pf.fName == null)
                                                 {
                                                     <p class="mb-0 text-sm text-gray-600"></p>
@@ -88,7 +90,6 @@
                                                 <div class="avatar avatar-md">
                                                     @if (Model.picture.Count() <= 0)
                                                     {
-                                                        @*<img src="~/Content/images2/tabanghub3.png" class="rounded-circle" alt="Profile" width="30" height="30"/>*@
                                                         <i class="icon-mid bi bi-person me-2"></i>
                                                     }
                                                     else
@@ -103,163 +104,73 @@
                                         </div>
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-                                        <li>
-                                            <a class="dropdown-item" href="~/Volunteer/VolunteerProfile">
-                                                <i class="icon-mid bi bi-person me-2"></i> My
-                                                Profile
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item" href="~/Volunteer/Participate">
-                                                <i class="icon-mid bi bi-gear me-2"></i>
-                                                Manage Events
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item" href="~/Page/Logout">
-                                                <i class="icon-mid bi bi-box-arrow-left me-2"></i> Logout
-                                            </a>
-                                        </li>
+                                        <li><a class="dropdown-item" href="~/Volunteer/VolunteerProfile"><i class="icon-mid bi bi-person me-2"></i> My Profile</a></li>
+                                        <li><a class="dropdown-item" href="~/Volunteer/Participate"><i class="icon-mid bi bi-gear me-2"></i> Manage Events</a></li>
+                                        <li><hr class="dropdown-divider"></li>
+                                        <li><a class="dropdown-item" href="~/Page/Logout"><i class="icon-mid bi bi-box-arrow-left me-2"></i> Logout</a></li>
                                     </ul>
                                 </div>
                             }
                         </li>
                     </ul>
                 }
-
-                @*else
-                    {
-                        <ul class="navbar-nav">
-                            <li class="nav-item d-md-none">
-                                <a href="~/Page/Login" class="nav-link">Login</a>
-                            </li>
-                            <li class="nav-item d-md-none">
-                                <a href="~/Page/ChooseRegister" class="nav-link">Register</a>
-                            </li>
-                            <li class="nav-item d-none d-md-inline me-1">
-                                <a href="~/Page/Login" class="btn btn-primary">Login</a>
-                            </li>
-                            <li class="nav-item d-none d-md-inline">
-                                <a href="~/Page/ChooseRegister" class="btn btn-primary">Register</a>
-                            </li>
-                        </ul>
-                    }*@
             </div>
         </div>
     </nav>
 
     @RenderBody()
 
-    @if (User.Identity.IsAuthenticated && ViewBag.Title != "Message")
-    {
-        <footer class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-12 mb-4">
-                        <img src="images/logo.png" class="logo img-fluid" alt="">
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-12 mb-4">
-                        <h5 class="site-footer-title mb-3">Quick Links</h5>
-
-                        <ul class="footer-menu">
-                            <!-- <li class="footer-menu-item"><a href="#" class="footer-menu-link">About us</a></li> -->
-                            <li class="footer-menu-item"><a class="footer-menu-link" href="#section_2">About</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Members</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Organizations</a></li>
-
-
-                            <!-- <li class="footer-menu-item"><a href="#" class="footer-menu-link">Become a volunteer</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Partner with us</a></li> -->
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 col-12 mx-auto">
-                        <h5 class="site-footer-title mb-3">Contact Infomation</h5>
-
-                        <p class="text-white d-flex mb-2">
-                            <i class="bi-telephone me-2"></i>
-
-                            <a href="#" class="site-footer-link">
-                                120-240-9600
-                            </a>
-                        </p>
-
-                        <p class="text-white d-flex">
-                            <i class="bi-envelope me-2"></i>
-
-                            <a href="mailto:info@yourgmail.com" class="site-footer-link">
-                                wheelyrev@gmail.com
-                            </a>
-                        </p>
-
-                        <!-- <p class="text-white d-flex mt-3">
-                            <i class="bi-geo-alt me-2"></i>
-                            Akershusstranda 20, 0150 Oslo, Norway
-                        </p>
-
-                        <a href="#" class="custom-btn btn mt-3">Get Direction</a> -->
-                    </div>
-                </div>
-            </div>
-
-            <div class="site-footer-bottom">
-                @*<div class="container">
-                    <div class="row">
-
-                        <div class="col-lg-6 col-md-7 col-12">
-                            <p class="copyright-text mb-0">
-                                Copyright © 2036 <a href="#">Kind Heart</a> Charity Org.
-                                Design: <a href="https://templatemo.com" target="_blank">TemplateMo</a>
-                            </p>
-                        </div>
-
-                        <div class="col-lg-6 col-md-5 col-12 d-flex justify-content-center align-items-center mx-auto">
-                            <ul class="social-icon">
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-twitter"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-facebook"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-instagram"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-linkedin"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="https://youtube.com/templatemo" class="social-icon-link bi-youtube"></a>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-                </div>*@
-            </div>
-        </footer>
-    }
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="~/Content/Js/JavaScript.js"></script>
 
-    <!-- JS Template -->
-    <script src="~/Content/Js/Template-js/jquery.min.js"></script>
-    <script src="~/Content/Js/Template-js/bootstrap.min.js"></script>
-    <script src="~/Content/Js/Template-js/jquery.sticky.js"></script>
-    <script src="~/Content/Js/Template-js/click-scroll.js"></script>
-    <script src="~/Content/Js/Template-js/counter.js"></script>
-    <script src="~/Content/Js/Template-js/custom.js"></script>
+    <!-- JS for fetching notifications and handling SignalR -->
+    <script>
+    $(document).ready(function () {
+        // Check if the user is logged in
+        @if (User.Identity.IsAuthenticated)
+        {
+            <text>
+                // Function to fetch unread notifications every 5 seconds
+                fetchUnreadNotifications();
+                setInterval(fetchUnreadNotifications, 5000);
+
+                function fetchUnreadNotifications() {
+                    $.ajax({
+                        url: '/Volunteer/GetUnreadNotifications',
+                        type: 'GET',
+                        success: function (data) {
+                            let unreadCount = data.length;
+                            updateNotificationCount(unreadCount);
+
+                            if (unreadCount > 0) {
+                                let notificationsHtml = '';
+                                data.forEach(notification => {
+                                    notificationsHtml += `<li><a class="dropdown-item">${notification.content}</a></li>`;
+                                });
+                                $('#notificationDropdown').html(notificationsHtml);
+                            } else {
+                                $('#notificationDropdown').html('<li><a class="dropdown-item">No new notifications</a></li>');
+                            }
+                        },
+                        error: function () {
+                            console.error("Error fetching unread notifications.");
+                        }
+                    });
+                }
+
+                function updateNotificationCount(count) {
+                    const notificationCountElement = $('#notificationCount');
+                    if (count > 0) {
+                        notificationCountElement.text(count).show();
+                    } else {
+                        notificationCountElement.hide();
+                    }
+                }
+            </text>
+        }
+    });
+    </script>
 </body>
 </html>
