--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -105,7 +105,8 @@
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                                         <li><a class="dropdown-item" href="~/Volunteer/VolunteerProfile"><i class="icon-mid bi bi-person me-2"></i> My Profile</a></li>
-                                        <li><a class="dropdown-item" href="~/Volunteer/Participate"><i class="icon-mid bi bi-gear me-2"></i> Manage Events</a></li>
+                                        <li><a class="dropdown-item" href="~/Volunteer/DonationHistory"><i class="bi bi-wallet2"></i> Donation History</a></li>
+                                        <li><a class="dropdown-item" href="~/Volunteer/Participate"><i class="bi bi-kanban"></i> Manage Events</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="~/Page/Logout"><i class="icon-mid bi bi-box-arrow-left me-2"></i> Logout</a></li>
                                     </ul>
